<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgViewPaymentMethod"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/imgViewPaymentMethod"
        android:src="@drawable/ic_cash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/imgViewPaymentMethod"
        android:text="@string/txtViewPaymentMethod"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imgViewPaymentMethod"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewPaymentMethod"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imgViewPaymentMethod"
        android:text="@string/txtCanadianCurrency"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imgViewPaymentMethod"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPaymentMethod" />


</RelativeLayout>