<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseActivity"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:clickable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#22577E"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/txtViewExpensePageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtViewExpensePageTitle"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="18dp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgViewCalendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="116dp"
        android:contentDescription="@string/imgViewCalendar"
        app:layout_constraintBottom_toTopOf="@+id/editTxtAmount"
        app:layout_constraintEnd_toStartOf="@+id/txtViewDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.40"
        app:srcCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/txtViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/txtViewDate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <EditText
        android:id="@+id/editTxtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/editTxtDecimal"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="@+id/toolBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/toolBar"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />

    <Button
        android:id="@+id/btnChooseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnChooseCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNotes" />

    <EditText
        android:id="@+id/editTxtNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editTxtNotes"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="@+id/toolBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/toolBar"
        app:layout_constraintTop_toBottomOf="@+id/editTxtAmount" />

    <GridView
        android:id="@+id/gridViewCategories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:horizontalSpacing="8dp"
        android:numColumns="4"
        android:verticalSpacing="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseCategory"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/relLayKeyboard"
        android:layout_width="410dp"
        android:layout_height="275dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/gridViewCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gridViewCategories">

        <include
            layout="@layout/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>